[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Graphics/Image/Credits/duck1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Image/Credits/bigboi.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Image/Credits/successduck.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Image/Credits/artsyduck.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Image/Credits/notrubber.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Image/Credits/toomanduck.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Image/Credits/slideduck.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/PeaberryBase.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scripts/Credits.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/Apple Japanese Keyboard.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/Graphics/Image/easteregg/Grandfinale.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assets/Fonts/Huglove.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 67
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 39
outline_color = Color( 0.780392, 0.262745, 0.262745, 1 )
use_mipmaps = true
font_data = ExtResource( 12 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Credits" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="ColorRect" parent="."]
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 609.0
color = Color( 0.172549, 0.14902, 0.14902, 1 )

[node name="CreditsContainer" type="Node2D" parent="."]
position = Vector2( 1, -1 )

[node name="LeCredit" type="Label" parent="CreditsContainer"]
margin_left = 369.0
margin_top = 307.0
margin_right = 560.0
margin_bottom = 721.0
theme = SubResource( 2 )
text = " "
align = 1

[node name="D2" type="Sprite" parent="CreditsContainer"]
visible = false
position = Vector2( 859, 392 )
scale = Vector2( 0.754902, 0.622549 )
texture = ExtResource( 1 )

[node name="D1" type="Sprite" parent="CreditsContainer"]
visible = false
position = Vector2( 182, 283 )
scale = Vector2( 0.626364, 0.641732 )
texture = ExtResource( 2 )

[node name="Dfinal" type="Sprite" parent="CreditsContainer"]
visible = false
position = Vector2( 324, 361 )
scale = Vector2( 2.02818, 2.45492 )
texture = ExtResource( 3 )

[node name="D3" type="Sprite" parent="CreditsContainer"]
visible = false
position = Vector2( 227.5, 165.375 )
scale = Vector2( 1.13918, 1.00097 )
texture = ExtResource( 4 )

[node name="D4" type="Sprite" parent="CreditsContainer"]
visible = false
position = Vector2( 826.96, 435.097 )
scale = Vector2( 0.509584, 0.600405 )
texture = ExtResource( 7 )

[node name="D5" type="Sprite" parent="CreditsContainer"]
visible = false
position = Vector2( 186.375, 461.375 )
scale = Vector2( 0.169401, 0.208958 )
texture = ExtResource( 5 )

[node name="D6" type="Sprite" parent="CreditsContainer"]
visible = false
position = Vector2( 816, 466 )
scale = Vector2( 0.589869, 0.545103 )
texture = ExtResource( 6 )

[node name="Title" type="RichTextLabel" parent="CreditsContainer"]
margin_left = 635.0
margin_top = -15.0
margin_right = 1019.0
margin_bottom = 174.0
theme = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "
[wave amp=80.0 freq=3]MMAKI[/wave]"
tab_size = 2
text = "
MMAKI"

[node name="Grandfinale" type="AudioStreamPlayer" parent="CreditsContainer"]
stream = ExtResource( 11 )

[node name="ButtonSkip" type="Button" parent="CreditsContainer"]
visible = false
margin_left = 681.0
margin_top = 208.0
margin_right = 899.0
margin_bottom = 307.0
theme = SubResource( 8 )
text = "Menu d'accueil"

[node name="dontleavesosoon" type="RichTextLabel" parent="CreditsContainer"]
visible = false
margin_left = 642.0
margin_top = 162.0
margin_right = 989.0
margin_bottom = 244.0
theme = SubResource( 6 )
custom_colors/default_color = Color( 0.901961, 0.215686, 0.215686, 1 )
bbcode_enabled = true
bbcode_text = "[shake rate=15 level=9]Don't leave so soon ! [/shake]"
text = "Don't leave so soon ! "

[connection signal="finished" from="CreditsContainer/Grandfinale" to="." method="_on_Grandfinale_finished"]
[connection signal="button_up" from="CreditsContainer/ButtonSkip" to="." method="_on_ButtonSkip_button_up"]
[connection signal="mouse_entered" from="CreditsContainer/ButtonSkip" to="." method="_on_ButtonSkip_mouse_entered"]
